# siphon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  backup.rs  config.rs  detect.rs  input.rs  lib.rs  main.rs  quirks.rs  restore.rs  schedule.rs  types.rs  ui.rs
tests/: e2e_docker_run.rs  e2e_postgres.rs  e2e_restore.rs  e2e_sqlite.rs  scheduler.rs
