[package]
name = "siphon"
version = "0.3.0"
edition = "2021"
description = "TUI for taking database dumps and scheduled backups across local + containerised DBs"

[[bin]]
name = "siphon"
path = "src/main.rs"

[lib]
name = "siphon"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "process", "io-util", "fs"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
which = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
